fixed visibility

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
  }
 
 a:link {
-  color: #B6808F;
+  color: #2D5987;
   background-color: transparent;
   text-decoration: none;
 }
